import org.gradle.api.tasks.JavaExec

plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.openjfx:javafx-controls:24'
    implementation 'org.openjfx:javafx-fxml:24'
    implementation 'org.openjfx:javafx-graphics:24'
    implementation 'org.openjfx:javafx-base:24'

    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    runtimeOnly group: 'org.xerial', name: 'sqlite-jdbc', version: '3.45.1.0'
}

javafx {
    version = "24"
    modules = [ 'javafx.controls' ]
}

tasks.withType(JavaExec).configureEach {
    doFirst {
        jvmArgs = [
                '--module-path', files(configurations.runtimeClasspath).asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
